<resources>
    <string name="app_name">AV8D</string>
    <string name="facebook_app_id">176951416183947</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="change">修改</string>
    <string name="search">搜索</string>
    <string name="submit">提交</string>
    <string name="out">退出</string>
    <string name="yuan">元</string>
    <string name="title_main">首页</string>
    <string name="title_guild">引导页</string>
    <string name="title_login">用户登录</string>
    <string name="title_web">网页</string>
    <string name="title_home">首页</string>
    <string name="title_mine">我的</string>
    <string name="title_user_info">个人主页</string>
    <string name="title_edit_user">编辑信息</string>
    <string name="title_my_follow">我的关注</string>
    <string name="title_my_fans">我的粉丝</string>
    <string name="title_my_profit">我的收益</string>
    <string name="title_profit_record">收益记录</string>
    <string name="title_setting">设置</string>
    <string name="title_room">直播间</string>
    <string name="title_room_finish">直播完成</string>
    <string name="title_player">播放器</string>
    <string name="title_search_anchor">搜索主播</string>
    <string name="title_message_list">消息列表</string>
    <string name="title_system_message">系统消息</string>
    <string name="title_fans_message">粉丝消息</string>
    <string name="title_emoji">表情</string>
    <string name="title_apply_anchor">主播申请验证</string>
    <string name="title_my_gifts">我的礼物</string>
    <string name="title_set_cash_password">设置提现密码</string>
    <string name="title_set_login_password">重置登录密码</string>
    <string name="title_reset_cash_password">重置提现密码</string>
    <string name="title_withdraw_cash">提现到银行卡</string>
    <string name="title_my_diamonds">充值</string>
    <string name="title_diamonds_record">钻石币交易记录</string>
    <string name="title_anchor_finish">直播结束</string>
    <string name="title_my_level">我的等级</string>
    <string name="title_problem">常见问题</string>
    <string name="title_problem_detail">问题详情</string>
    <string name="title_extension">邀你一起播</string>
    <string name="title_forget_password">重置密码</string>
    <string name="title_password_error">密码错误</string>
    <string name="tab_home">首页</string>
    <string name="tab_live_show">发直播</string>
    <string name="tab_mine">我的</string>
    <string name="toast_exit_app">再按一次退出应用</string>
    <string name="toast_input_not_null">输入内容不能为空!</string>
    <string name="toast_get_picture_failure">获取图片失败</string>
    <string name="toast_permission_open">权限已开启</string>
    <string name="toast_permission_refuse">权限被拒绝，请在设置里面开启相应权限，若无相应权限会影响使用</string>
    <string name="toast_right_email">请输入正确的邮箱</string>
    <string name="toast_input_code">请输入验证码</string>
    <string name="toast_input_cash">请输入提现金额</string>
    <string name="toast_input_name">请输入姓名</string>
    <string name="toast_input_card_number">请输入银行卡号</string>
    <string name="toast_chose_bank_type">请选择银行开户行</string>
    <string name="toast_has_been_sent_to">已发送验证码至%s</string>
    <string name="toast_has_been_sent">已发送验证码至邮箱</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_failure">登录失败</string>
    <string name="toast_logout_success">退出登录成功</string>
    <string name="toast_logout_failure">退出登录失败</string>
    <string name="toast_give_up_to_edit">您确定要放弃编辑吗？</string>
    <string name="toast_edit_success">信息更新成功</string>
    <string name="toast_apply_pending">您的主播申请正在审核中，请耐心等待~</string>
    <string name="toast_apply_disagree">您的主播申请不通过，是否重新申请？</string>
    <string name="toast_apply_disable">您的主播申请被禁用，请联系客服后重新申请。</string>
    <string name="toast_apply_none">您还没申请主播，是否要申请主播。</string>
    <string name="toast_apply_success_submit">您的主播申请已成功提交，请耐心待待~</string>
    <string name="toast_give_up_to_apply">您确定要放弃主播申请吗？</string>
    <string name="toast_input_right_mobile_or_email">请输入正确的手机号码或邮箱号码</string>
    <string name="toast_upload_head_img">请上传一张自拍照或头像</string>
    <string name="toast_no_data">暂无数据</string>
    <string name="toast_no_more_data">暂无更多数据</string>
    <string name="toast_input_live_title">请输入标题</string>
    <string name="toast_input_live_notice">请输入公告</string>
    <string name="toast_input_live_cover">请选择一张图片作为封面</string>
    <string name="toast_follow_success">关注成功</string>
    <string name="toast_follow_failure">关注失败</string>
    <string name="toast_blacklist_success">成功拉入黑名单</string>
    <string name="toast_gurad_success">设置守护成功</string>
    <string name="toast_set_withdraw_cash_password_success">设置提现密码成功</string>
    <string name="toast_reset_withdraw_cash_password_success">重置提现密码成功</string>
    <string name="toast_reset_password_success">重置密码成功</string>
    <string name="toast_input_password">请输入密码</string>
    <string name="toast_login_out_of_date">您的登录信息过时，请重新登录</string>
    <string name="toast_account_with_no_mobile">您的账号还未绑定手机，请先绑定</string>
    <string name="toast_binding_success">绑定成功</string>
    <string name="toast_does_not_support_beauty">当前机型不支持该滤镜</string>
    <string name="toast_exit_anchor">观众在路上了，确认要关闭直播吗？</string>
    <string name="toast_delete_message">是否删除消息？</string>
    <string name="toast_withdraw2card_success">提现已经提交申请</string>
    <string name="toast_withdraw2card_fail">请输入%s邮箱收到的验证码</string>
    <string name="toast_add_blacklist_success">成功拉入黑名单</string>
    <string name="toast_set_success">设置成功</string>
    <string name="toast_format_account">请输入6-10位数字和字母组合的账号</string>
    <string name="toast_format_passage">请输入6-10位数字和字母组合的密码</string>
    <string name="toast_send_gift_success">发送礼物成功</string>
    <string name="toast_send_gift_fail">发送礼物失败，钻石币不足</string>
    <string name="toast_is_not_anchor">您还不是主播喔^v^</string>
    <string name="toast_room_char_unsend">您已经被禁言</string>
    <string name="toast_netty_is_destory">IM服务器忙碌，请重启APP试试</string>
    <string name="toast_money_often_setting">请不要频繁操作，%d分钟后再修改</string>
    <string name="tip_title">温馨提示</string>
    <string name="tip_cancel">取消</string>
    <string name="tip_confirm">确定</string>
    <string name="tip_ignore">忽略</string>
    <string name="tip_confirm_to_logout">您确定要退出登录吗?</string>
    <string name="tip_confirm_to_exit_room">您确定要退出房间吗?</string>
    <string name="tip_no_follow">你还没有关注的主播呢~</string>
    <string name="tip_no_hot">暂时没有主播</string>
    <string name="tip_no_balck_list">这里一个人都没有</string>
    <string name="tip_no_fans_list">您还没有粉丝，开播让更多的人关注你吧！</string>
    <string name="tip_no_record">还没有交易记录呢~</string>
    <string name="tip_no_search_res">没有搜索出来呢，换个关键词试试~</string>
    <string name="tip_no_message">暂时没有消息通知哦~</string>
    <string name="tip_no_any_data">oh，没有数据吖~</string>
    <string name="tip_err_request">页面丢失啦，点击图标刷新一下吧~</string>
    <string name="tip_is_call">是否播号</string>
    <string name="tip_input_recommend_code">请输入推荐人推广码</string>
    <string name="tip_room_descrption">好看的根本停不下来啊啊啊啊</string>
    <string name="tip_extension_descrption">高质量在线直播平台，美女帅哥，好看的根本停不下来</string>
    <string name="tip_no_diamonds">您的钻石币不足啦,快去充值吧~</string>
    <string name="tip_pay_for_vip_room">观看的房间是个vip房间，收费标准为%d钻石币每分钟，是否继续观看</string>
    <string name="tip_diamonds_success">充值成功</string>
    <string name="tip_diamonds_fail">充值失败</string>
    <string name="tip_diamonds_again">充值已重复</string>
    <string name="tip_paly_again">是否继续观看</string>
    <string name="tip_high_flow">您正在使用移动网络播放视频\n可能产生较高流量费用\n是否继续观看</string>
    <string name="input_mobile_hint">请输入手机号</string>
    <string name="input_account_hint">请输入账号</string>
    <string name="input_code_hint">短信验证码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_message_or_notice_hint">说点什么吧~</string>
    <string name="input_search_anchor_hint">请输入主播名或主播ID进行搜索</string>
    <string name="input_real_name_hint">请输入真实姓名</string>
    <string name="input_nickname_hint">请输入昵称</string>
    <string name="input_email_hint">请输入邮箱</string>
    <string name="input_account_or_email_hint">请输入账号或邮箱</string>
    <string name="input_verification_code_hint">请输入收到的验证码</string>
    <string name="input_six_number_hint">请输入6位数字</string>
    <string name="input_withdraw_cash_num">请输入至少%1$s元，不超过%2$s元</string>
    <string name="input_bank_code_hint">若姓名与银行卡账户不符会提现失败哦~</string>
    <string name="input_opening_bank_hint">请选择</string>
    <string name="input_anchor_title_hint">有趣的标题更吸引观众哦~</string>
    <string name="input_anchor_notice_hint">发布公告昭告观众吧~</string>
    <string name="input_signature_hint">请输入自己的个性签名吧~</string>
    <string name="input_content_hint">请输入内容吧~</string>
    <string name="btn_get_code">获取验证码</string>
    <string name="btn_login">登录/注册</string>
    <string name="btn_launch">开启直播旅行</string>
    <string name="btn_edit_info">编辑资料</string>
    <string name="btn_check_detail">查看明细</string>
    <string name="btn_confirm_cash">确认提现</string>
    <string name="btn_send_message">发送消息</string>
    <string name="btn_buy_diamonds">买钻石币</string>
    <string name="btn_logout">退出登录</string>
    <string name="btn_send">发送</string>
    <string name="btn_buy">购买</string>
    <string name="btn_diamonds_recharge"><![CDATA[>充值]]></string>
    <string name="btn_manage">管理</string>
    <string name="btn_follow">关注</string>
    <string name="btn_letter">私信</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_take_a_picture">拍照</string>
    <string name="btn_album">相册</string>
    <string name="btn_diamonds_record">交易记录</string>
    <string name="btn_message">消息</string>
    <string name="btn_ignore_message">忽略未读</string>
    <string name="btn_begin_anchor">开始直播</string>
    <string name="btn_go_home">返回首页</string>
    <string name="btn_get_code_after_second">%ds后重新获取</string>
    <string name="btn_get_code_again">重新获取</string>
    <string name="btn_set_guarder">设为守护</string>
    <string name="btn_set_guarder_none">取消守护</string>
    <string name="btn_my_guarder_list">我的守护列表</string>
    <string name="btn_gag">禁言</string>
    <string name="btn_gag_none">取消禁言</string>
    <string name="btn_forget_password">忘记密码</string>
    <string name="go_to_hot">去热门逛逛</string>
    <string name="tag_agree_clause">登录即代表您同意</string>
    <string name="tag_clause">《免责条款》</string>
    <string name="tag_other_login_method">其他登录方式</string>
    <string name="tag_search">搜索</string>
    <string name="tag_cash_rules">提现规则</string>
    <string name="tag_agree_cash_rules">提现即代表您阅读并同意</string>
    <string name="tag_cash_agreement">《用户提现协议》</string>
    <string name="tag_live_show_desc">你丑你先睡，我美我直播</string>
    <string name="tag_user_center_profit">我的收益</string>
    <string name="tag_user_center_level">我的等级</string>
    <string name="tag_user_center_diamonds">我的钻石币</string>
    <string name="tag_user_center_gift">我的礼物</string>
    <string name="tag_user_center_inviting_friends">邀请好友</string>
    <string name="tag_user_center_inviting_remark">邀请有奖哦~</string>
    <string name="tag_user_center_extension_code">推广码</string>
    <string name="tag_user_center_set">设置</string>
    <string name="tag_follow">关注</string>
    <string name="tag_fans">粉丝</string>
    <string name="tag_un_follow">取消关注</string>
    <string name="tag_add_blacklist">加入黑名单</string>
    <string name="tag_remove_blacklist">移出黑名单</string>
    <string name="tag_name">姓名</string>
    <string name="tag_nickname">昵称</string>
    <string name="tag_sex">性别</string>
    <string name="tag_man">男</string>
    <string name="tag_lady">女</string>
    <string name="tag_real_name">真实姓名</string>
    <string name="tag_email">邮箱</string>
    <string name="tag_verification_code">验证码</string>
    <string name="tag_set_withdraw_cash_password">设置提现密码</string>
    <string name="tag_set_password">设置密码</string>
    <string name="tag_withdraw_cash_num">提现金额</string>
    <string name="tag_withdraw_password">提现密码</string>
    <string name="tag_bank_code">银行卡号</string>
    <string name="tag_opening_bank">开户行</string>
    <string name="tag_account">账号</string>
</resources>