<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBg"
    tools:context=".ui.profit.widget.WithdrawCashActivity">

    <com.qcloud.liveshow.widget.toolbar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        toolbar:is_title="true"
        toolbar:title_text="@string/title_withdraw_cash"
        toolbar:is_left="true"
        toolbar:left_icon="@drawable/icon_normal_back"/>

    <View
        style="@style/LineHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="@color/white"
        android:paddingLeft="@dimen/layout_margin">

        <TextView
            android:id="@+id/tv_cash_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/micro_text_size"
            android:text="@string/tag_withdraw_cash_num"/>

        <EditText
            android:id="@+id/et_cash"
            style="@style/ApplyEditTextStyle"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/input_withdraw_cash_num"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin"
            android:textColor="@color/colorStart"
            android:textSize="@dimen/micro_text_size"
            android:text="@string/yuan"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="@color/white"
        android:paddingLeft="@dimen/layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/micro_text_size"
                android:text="@string/tag_name"/>

            <EditText
                android:id="@+id/et_name"
                style="@style/ApplyEditTextStyle"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/input_real_name_hint"/>
        </LinearLayout>

        <View
            style="@style/LineHorizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_bank_code_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/micro_text_size"
                android:text="@string/tag_bank_code"/>

            <EditText
                android:id="@+id/et_bank_code"
                style="@style/ApplyEditTextStyle"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:hint="@string/input_bank_code_hint"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="@color/white"
        android:paddingLeft="@dimen/layout_margin">

        <TextView
            android:id="@+id/tv_bank_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/micro_text_size"
            android:text="@string/tag_opening_bank"/>

        <TextView
            android:id="@+id/tv_bank"
            style="@style/ApplyEditTextStyle"
            android:hint="@string/input_opening_bank_hint"
            android:drawableRight="@drawable/icon_orange_right_arrow"/>

    </LinearLayout>
    <View
        style="@style/LineHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="@color/white"
        android:paddingLeft="@dimen/layout_margin">

        <TextView
            android:id="@+id/tv_set_password_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/micro_text_size"
            android:text="@string/tag_withdraw_password"/>

        <EditText
            android:id="@+id/et_password"
            style="@style/ApplyEditTextStyle"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:hint="@string/input_six_number_hint"/>

        <CheckBox
            android:id="@+id/cb_see"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/layout_margin"
            android:paddingRight="@dimen/layout_margin"
            android:background="@null"
            android:button="@null"
            android:layout_marginRight="@dimen/layout_margin"
            android:checked="false"
            android:drawableLeft="@drawable/check_eye"/>
    </LinearLayout>
    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/btn_left_right_orange_selector"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:gravity="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/confirm"/>


</LinearLayout>
